<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>webviz_ros2_adapter</name>
  <version>0.1.0</version>
  <description>Drop-in ROS 2 node that mirrors topics to a WebViz hub (§6.2).</description>
  <maintainer email="longxianchao@gmail.com">Xianchao Long</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <!-- The `websockets` Python package (WebViz SDK transport) is a pip dep, not a
       rosdep; see README. -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
